--- a/pet-management-system/bin/main/templates/users.html
+++ b/pet-management-system/bin/main/templates/users.html
@@ -21,8 +21,11 @@
   <!-- Navbar links -->
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
-      <li class="nav-item">
+    <li class="nav-item">
         <a class="nav-link" th:href="@{/pets}">Pet Profiles</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" th:href="@{/users}">User Profiles</a>
       </li>
     </ul>
   </div>
@@ -30,36 +33,36 @@
 
 	<div class ="container">
 		<div class = "row">
-			<h1> List Pets </h1>
+			<h1> List Users </h1>
 		</div>
 		
 		<div class = "row">
 			<div class = "col-lg-3">
-				<a th:href = "@{/pets/new}" class = "btn btn-primary btn-sm mb-3"> Add Pets</a>
+				<a th:href = "@{/users/new}" class = "btn btn-primary btn-sm mb-3"> Add User</a>
 			</div>
 		</div>
 		<table class = "table table-striped table-bordered">
 			<thead class = "table-dark">
 				<tr>
-					<th> Pet's Name</th>
-					<th> Pet's Breed</th>
-					<th> Pet's Owner </th>
-					<th> Pet's Medical History </th>
+					<th> User's Name</th>
+					<th> User's Email</th>
+					<th> User's Password </th>
+					<th> User Type </th>
 					<th> Actions</th>
 				</tr>
 			</thead>
 			
 			<tbody>
-				<tr th:each = "pet: ${pets}">
-					<td th:text = "${pet.petName}"></td>
-					<td th:text = "${pet.petBreed}"></td>
-					<td th:text = "${pet.petOwner}"></td>
-					<td th:text = "${pet.medHistory}"></td>
+				<tr th:each = "user: ${users}">
+					<td th:text = "${user.userName}"></td>
+					<td th:text = "${user.userEmail}"></td>
+					<td th:text = "${user.userPwd}"></td>
+					<td th:text = "${user.userType}"></td>
 					<td>
-						<a th:href = "@{/pets/edit/{id}(id=${pet.id})}"
+						<a th:href = "@{/users/edit/{id}(id=${user.userId})}"
 						 class = "btn btn-primary">Update</a>
 						
-						<a th:href = "@{/pets/{id}(id=${pet.id})}"
+						<a th:href = "@{/users/{id}(id=${user.userId})}"
 						 class = "btn btn-danger">Delete</a>
 	 
 					</td>
