--- a/pet-management-system/src/main/resources/templates/edit_pet.html
+++ b/pet-management-system/src/main/resources/templates/edit_pet.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Pet Management System</title>
+<title>Pawtropica</title>
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -11,7 +11,7 @@
 <body>
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Pet Management System</a>
+  <a class="navbar-brand" th:href="@{/pets}">Pawtropica</a>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -22,7 +22,7 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/pets}">Pet Management</a>
+        <a class="nav-link" th:href="@{/pets}">Pawtropica</a>
       </li>
     </ul>
   </div>
@@ -32,11 +32,11 @@
 	<div class = "container">
 		<div class = "row">
 			<div class ="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-				<h1 class = "text-center"> Update Pet </h1>
+				<h1 class = "text-center"> Update Pet Profile </h1>
 				<div class = "card-body">
 					<form th:action="@{/pets/{id} (id=${pet.id})}" th:object = "${pet}" method="POST">
 						<div class ="form-group">
-							<label> Pet Name </label>
+							<label> Pet's Name </label>
 							<input
 							type = "text"
 							name = "petName"
@@ -47,24 +47,33 @@
 						</div>
 						
 						<div class ="form-group">
-							<label> Owner Name </label>
-							<input
-							type = "text"
-							name = "ownerName"
-							th:field = "*{ownerName}"
-							class = "form-control"
-							placeholder="Enter Owner's Name" 
-							/>
-						</div>
-						
-						<div class ="form-group">
-							<label> Pet Breed </label>
+							<label> Pet's Breed </label>
 							<input
 							type = "text"
 							name = "petBreed"
 							th:field = "*{petBreed}"
 							class = "form-control"
-							placeholder="Enter Pet Breed" 
+							placeholder="Enter Pet's Breed" 
+							/>
+						</div>
+						<div class ="form-group">
+							<label> Pet's Owner </label>
+							<input
+							type = "text"
+							name = "petOwner"
+							th:field = "*{petOwner}"
+							class = "form-control"
+							placeholder="Enter Pet's Owner's Name" 
+							/>
+						</div>
+						<div class ="form-group">
+							<label> Medical History </label>
+							<input
+							type = "text"
+							name = "medHistory"
+							th:field = "*{medHistory}"
+							class = "form-control"
+							placeholder="Enter Pet's Medical History" 
 							/>
 						</div>
 						
